fix header heading spacing

--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -187,7 +187,6 @@
 
   @media screen and (max-width: 500px) {
     font-size: 2rem;
-    padding: 1rem 1rem 0 1rem;
   }
 }
 
