--- a/portfolio/src/container/About/About.scss
+++ b/portfolio/src/container/About/About.scss
@@ -5,7 +5,7 @@
 
   @media screen and (max-width: 500px) {
     .app__about-header {
-      padding-top: 3rem;
+      padding: 3rem 1rem 0 1rem;
     }
   }
 }
